--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/application.css" />
+    <link rel="stylesheet" href="/css/{{assets "application.css"}}" />
   </head>
 
   <body>
@@ -12,6 +12,6 @@
     <h1>This is our content!</h1>
     <button class="btn btn-primary">Our Button</button>
 
-    <script src="/js/application.js"></script>
+    <script src="/js/{{assets "application.js"}}"></script>
   </body>
 </html>
